<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_registro_monto"
                android:text="@string/registro_monto_dummy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="start|center_vertical" />

            <TextView
                android:id="@+id/item_registro_date"
                android:text="@string/registro_date_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

            <View
                android:layout_width="1dip"
                android:layout_height="20dp"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical"/>

            <ImageButton
                android:id="@+id/item_registro_optionsBtn"
                android:src="@drawable/ic_action_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="28dp"
                android:maxWidth="28dp"
                android:longClickable="true"
                android:adjustViewBounds="true"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/options"
                android:scaleType="fitXY"
                android:onClick="onClick_Options"
                android:padding="0dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/item_registro_title"
            android:text="@string/cuenta_nombre_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/item_registro_description"
            android:text="@string/registro_descripcion_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</merge>
