<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_rubro_title"
                android:text="@string/rubro_nombre_dummy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="0dp"
                style="@style/Selectable.Title"
                android:onClick="onClick_SelectItem" />

            <View
                android:layout_width="1dip"
                android:layout_height="20dp"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical"/>

            <ImageButton
                android:id="@+id/item_rubro_optionsBtn"
                android:src="@drawable/ic_action_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="28dp"
                android:maxWidth="28dp"
                android:adjustViewBounds="true"
                style="?android:attr/borderlessButtonStyle"
                android:contentDescription="@string/options"
                android:scaleType="fitXY"
                android:onClick="onClick_Options"
                android:padding="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/item_rubro_monto"
                android:text="@string/rubro_monto_dummy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item_rubro_cantidad"
                android:text="@string/rubro_cantidad_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_rubro_description"
            android:text="@string/rubro_description_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</merge>